templating - product page display, specifications tab

--- a/theme/tsconfig.json
+++ b/theme/tsconfig.json
@@ -1,15 +1,16 @@
 {
-  "extends": "../tsconfig.json",
+  "extends": "../.nuxt/tsconfig.json",
   "compilerOptions": {
-    "module": "esnext",
-    "target": "es2022",
     "allowJs": true,
-    "types": ["@nuxt/image", "@nuxtjs/i18n", "nuxt-graphql-client"]
+    "types": ["@nuxt/image", "@nuxtjs/i18n", "nuxt-graphql-client"],
+    "strict": true
   },
   "include": [
-    "./**/*",
     "../.nuxt/nuxt.d.ts",
     "../.nuxt/imports.d.ts",
-    "../woonuxt_base/app/types/**/*.d.ts"
+    "./types/nuxt.d.ts",
+    "./app/**/*",
+    "./**/*.ts",
+    "./**/*.vue"
   ]
 }
