--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@nuxtjs/i18n": "^9.5.2",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/lodash.merge": "^4.6.9",
+    "lodash.merge": "^4.6.2",
     "nuxt": "^4.0.3",
     "nuxt-graphql-client": "^0.2.46",
     "prettier": "^3.6.2"
